--- a/templates/main.html
+++ b/templates/main.html
@@ -30,7 +30,8 @@
             <button type="button" class="w3-button" onclick="clickButton('Delete')">Delete Account</button>
             <button type="button" class="w3-button" onclick="clickButton('Logout')">Log out</button>
             <button type="button" class="w3-button" onclick="clickButton('Transfer')">Transfer</button>
-            <button type="button" class="w3-button" onclick="clickButton('Telegram')">Telegram</button>
+            <button type="button" class="w3-button" onclick="clickButton('Telegram')">Telegram Salary Prediction</button>
+            <button type="button" class="w3-button" onclick="clickButton('Telegramimage')">Telegram Image Prediction</button>
         </form>
         </div>
     </div>
