--- a/templates/telegramimage.html
+++ b/templates/telegramimage.html
@@ -2,29 +2,29 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="5"> 
     <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
 </head>
 
 <body>
     <div class="container">
-        <h2>Chatbot by Gemini</h2>
+        <h2>Telegram Bot</h2>
 
-        <form action="/gemini_reply" method="post" id="myform">
-            <input type="text" name="q">
-            <input type="hidden" id="instruct" name="instruct">
-            <button type="button" onclick="clickButton('enter')">Submit</button>
+        <form action="{{url_for('telegramimage')}}" method="post" id="myform">
+            <input type="hidden" id="instruct" name="instruct" value="">
+            <button type="button" onclick="clickButton('start')">Start Telegram</button>
             <button type="button" onclick="clickButton('back')">Main Page</button>
         </form>
     </div>
 
     <script>
-        function clickButton(command){            
+        function clickButton(command){
             console.log("command="+command);
             instruction=document.getElementById("instruct");
             instruction.value=command;
             document.getElementById("myform").submit();
         }
 
-    </script>        
+    </script>    
 </body>
 </html>
