--- a/templates/gemini_reply.html
+++ b/templates/gemini_reply.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
@@ -14,3 +16,4 @@
         </form>
     </div>
 </body>
+</html>
