--- a/templates/main.html
+++ b/templates/main.html
@@ -33,6 +33,7 @@
             <button type="button" class="w3-button" onclick="clickButton('Telegram')">Telegram Salary Prediction</button>
             <button type="button" class="w3-button" onclick="clickButton('Telegramimage')">Telegram Image Prediction</button>
             <button type="button" class="w3-button" onclick="clickButton('Telegramwebhook')">Telegram Web Hook</button>
+            <button type="button" class="w3-button" onclick="clickButton('Prediction')">Prediction</button>
         </form>
         </div>
     </div>
