--- a/templates/telegramwebhook.html
+++ b/templates/telegramwebhook.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <h2>Telegram Bot</h2>
-        <form action="{{url_for('telegram')}}" method="post" id="myform">
+        <form action="{{url_for('telegramwebhook')}}" method="post" id="myform">
             <input type="hidden" id="instruct" name="instruct" value="">
             <!--button type="button" onclick="clickButton('start')">Start Telegram</button-->
             <button type="button" onclick="clickButton('back')">Main Page</button>
