--- a/templates/telegramwebhook.html
+++ b/templates/telegramwebhook.html
@@ -17,12 +17,16 @@
 <body>
     <div class="container">
         <h2>Telegram Bot</h2>
-        <form action="{{url_for('telegramwebhook')}}" method="post" id="myform">
-            <input type="hidden" id="instruct" name="instruct" value="">
-            <!--button type="button" onclick="clickButton('start')">Start Telegram</button-->
-            <button type="button" onclick="clickButton('startbot')">Start Bot</button>
-            <button type="button" onclick="clickButton('back')">Main Page</button>
-        </form>
+        <div>
+            <p>{{status}}</p>
+        </div>
+        <div>
+            <form action="{{url_for('telegramwebhook')}}" method="post" id="myform">
+                <input type="hidden" id="instruct" name="instruct" value="">
+                <!--button type="button" onclick="clickButton('start')">Start Telegram</button-->
+                <button type="button" onclick="clickButton('back')">Main Page</button>
+            </form>
+        </div>
    </div>
 
     <script>
