--- a/templates/main.html
+++ b/templates/main.html
@@ -31,9 +31,9 @@
             <button type="button" class="w3-button" onclick="clickButton('Logout')">Log out</button>
             <button type="button" class="w3-button" onclick="clickButton('Transfer')">Transfer</button>
             <button type="button" class="w3-button" onclick="clickButton('Telegram')">Telegram Salary Prediction</button>
-            <button type="button" class="w3-button" onclick="clickButton('Telegramimage')">Spam Checker Telegram Bot </button>
-            <!--button type="button" class="w3-button" onclick="clickButton('Telegramwebhook')">Telegram Web Hook</button-->
-            <button type="button" class="w3-button" onclick="clickButton('Prediction')">Prediction</button>
+            <!--button type="button" class="w3-button" onclick="clickButton('Telegramimage')">Spam Checker Telegram Bot </button-->
+            <button type="button" class="w3-button" onclick="clickButton('Telegramwebhook')">Telegram Web Hook</button-->
+            <button type="button" class="w3-button" onclick="clickButton('DBS Stock Price Prediction')">Prediction</button>
         </form>
         </div>
     </div>
